--- a/frontend/public/locales/ti/blog.json
+++ b/frontend/public/locales/ti/blog.json
@@ -1,42 +1,43 @@
 {
-  "title": "Mental Health Blog",
-  "subtitle": "Discover insights, tips, and stories to support your mental wellness journey",
-  "readMore": "Read More",
-  "shareText": "Share this article:",
-  "otherBlogs": "Other Blogs",
-  "backToBlogs": "← Back to All Blogs",
+  "title": "மனநல பிளாக்",
+  "subtitle": "உங்கள் மனநல பயணத்தை ஆதரிக்க உள்ளுணர்வு, குறிப்புகள் மற்றும் கதைகளை ஆராயுங்கள்",
+  "readMore": "மேலும் படிக்கவும்",
+  "shareText": "இந்த கட்டுரையை பகிரவும்:",
+  "otherBlogs": "பிற பிளாக்கள்",
+  "backToBlogs": "← அனைத்து பிளாக்களுக்குத் திரும்பு",
   "category": {
-    "mentalHealth": "Mental Health",
-    "wellness": "Wellness",
-    "community": "Community",
-    "health": "Health",
-    "expression": "Expression",
-    "growth": "Growth",
-    "anxiety": "Anxiety",
-    "mindfulness": "Mindfulness"
+    "mentalHealth": "மனநலம்",
+    "wellness": "நலன்",
+    "community": "சமுதாயம்",
+    "health": "ஆரோக்கியம்",
+    "expression": "பிரকাশம்",
+    "growth": "வளர்ச்சி",
+    "anxiety": "பிரச்சனை",
+    "mindfulness": "கவனத்துடன்"
   },
   "titles": {
-    "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "Why Talking About Mental Health Matters?",
-    "DIGITAL_DETOX_HOW_TO_RESET_YOUR_MIND": "Digital Detox: How to Reset Your Mind",
-    "SIMPLE_HABITS_TO_BOOST_YOUR_MENTAL_WELLNESS_DAILY": "Simple Habits to Boost Your Mental Wellness Daily",
-    "SLEEP_THE_SECRET_PILLAR_OF_MENTAL_HEALTH": "Sleep: The Secret Pillar of Mental Health",
-    "JOURNALING_FOR_CLARITY_TURNING_THOUGHTS_INTO_HEALING_WORDS": "Journaling for Clarity: Turning Thoughts Into Healing Words",
-    "THE_HIDDEN_LINK_BETWEEN_CREATIVITY_AND_MENTAL_HEALTH": "The Hidden Link Between Creativity and Mental Health",
-    "RESILIENCE_BUILDING_HOW_TO_BOUNCE_BACK_FROM_SETBACKS_STRONGER": "Resilience Building: How to Bounce Back from Setbacks Stronger",
-    "WHEN_MENTAL_HEALTH_MAKES_CONNECTIONS_HARDER_ANXIETY_OVERTHINKING_AND_SOCIAL_AWKWARDNESS": "When Mental Health Makes Connections Harder: Anxiety, Overthinking, and Social Awkwardness",
-    "SILENCE_AND_SOLITUDE_WHY_DOING_NOTHING_IS_SOMETIMES_EVERYTHING": "Silence and Solitude: Why Doing Nothing is Sometimes Everything"
-  },
-  "dates": {
-    "March_15_2024": "March 15, 2024",
-    "March_10_2024": "March 10, 2024",
-    "March_5_2024": "March 5, 2024",
-    "March_12_2024": "March 12, 2024",
-    "March_19_2024": "March 19, 2024",
-    "March_26_2024": "March 26, 2024",
-    "April_2_2024": "April 2, 2024",
-    "April_9_2024": "April 9, 2024",
-    "April_16_2024": "April 16, 2024"
-  },
+  "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "மனநலம் பற்றி பேசுவது ஏன் முக்கியம்?",
+  "DIGITAL_DETOX_HOW_TO_RESET_YOUR_MIND": "டிஜிட்டல் டிடாக்ஸ்: உங்கள் மனதை மீண்டும் அமைப்பது எப்படி",
+  "SIMPLE_HABITS_TO_BOOST_YOUR_MENTAL_WELLNESS_DAILY": "மனநலத்தை மேம்படுத்த எளிய தினசரி பழக்கங்கள்",
+  "SLEEP_THE_SECRET_PILLAR_OF_MENTAL_HEALTH": "தூக்கம்: மனநலத்தின் மறைந்த தூண்",
+  "JOURNALING_FOR_CLARITY_TURNING_THOUGHTS_INTO_HEALING_WORDS": "தெளிவுக்கான குறிப்பேடு: எண்ணங்களை சிகிச்சை வார்த்தைகளாக மாற்றுவது",
+  "THE_HIDDEN_LINK_BETWEEN_CREATIVITY_AND_MENTAL_HEALTH": "படைப்பாற்றலும் மனநலமும் இடையிலான மறைந்த தொடர்பு",
+  "RESILIENCE_BUILDING_HOW_TO_BOUNCE_BACK_FROM_SETBACKS_STRONGER": "மீண்டு வரும் திறன்: பின்னடைவை எதிர்த்து வலிமையாக மாறுவது எப்படி",
+  "WHEN_MENTAL_HEALTH_MAKES_CONNECTIONS_HARDER_ANXIETY_OVERTHINKING_AND_SOCIAL_AWKWARDNESS": "மனநலம் தொடர்புகளை கடினமாக்கும் போது: கவலை, மிகுந்த சிந்தனை மற்றும் சமூக தயக்கம்",
+  "SILENCE_AND_SOLITUDE_WHY_DOING_NOTHING_IS_SOMETIMES_EVERYTHING": "அமைதி மற்றும் தனிமை: சில நேரங்களில் எதையும் செய்யாதது மிக முக்கியம்"
+},
+ "dates": {
+  "March_15_2024": "15 மார்ச், 2024",
+  "March_10_2024": "10 மார்ச், 2024",
+  "March_5_2024": "5 மார்ச், 2024",
+  "March_12_2024": "12 மார்ச், 2024",
+  "March_19_2024": "19 மார்ச், 2024",
+  "March_26_2024": "26 மார்ச், 2024",
+  "April_2_2024": "2 ஏப்ரல், 2024",
+  "April_9_2024": "9 ஏப்ரல், 2024",
+  "April_16_2024": "16 ஏப்ரல், 2024"
+}
+,
   "contents": {
     "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "\n        <p>Mental health is as important as physical health, yet for years, it has been surrounded by silence, stigma, and misconceptions. Many people struggling with anxiety, depression, stress, or other challenges often keep their struggles hidden out of fear of being judged or misunderstood. But talking about mental health is not just important; it can be life-changing.</p>\n        <br>\n        <h2><strong>1. Breaking the Stigma</strong></h2>\n        <p>One of the biggest reasons people hesitate to seek help is the stigma surrounding mental health. Open conversations help normalize the idea that mental health struggles are common and nothing to be ashamed of. Just as we talk about fever or diabetes, we should be able to talk about anxiety or depression.</p>\n        <br>\n        <h2><strong>2. Encouraging Support and Connection</strong></h2>\n        <p>When someone opens up about what they are going through, it creates space for empathy and support. Talking about your struggles can help others understand you better, and it may even inspire someone else who's suffering in silence to seek help too. Sharing experiences reminds us that \"We are not alone\".</p>\n        <br>\n        <h2><strong>3. Early Intervention Saves Lives</strong></h2>\n        <p>Mental health issues often grow silently until they feel overwhelming. By talking about them early, individuals can access resources, therapy, or coping strategies before the situation worsens. Just as early treatment helps physical illnesses, timely conversations about mental health can prevent severe outcomes.</p>\n        <br>\n        <h2><strong>4. Promoting Healing and Self-Acceptance</strong></h2>\n        <p>Bottling up emotions increases stress, shame, and self-criticism. Expressing feelings, whether with friends, family, or professionals, allows individuals to process what they are experiencing. Talking can feel like a weight lifted off the shoulders and is often the first step toward healing.</p>\n        <br>\n        <h2><strong>5. Creating a Culture of Care</strong></h2>\n        <p>When we openly discuss mental health at home, in schools, and at workplaces, we create safer environments where people feel understood and valued. This culture of care ensures that support systems are always available for anyone in need.</p>\n        <br>\n        <h2><strong>6. Helping Others Who May Be Struggling</strong></h2>\n        <p>Sometimes, people battling mental health issues don't have the words to explain what they are going through. By talking about it openly, you can validate their feeling and show them that seeking help is not a weakness but a strength.</p>\n        <br>\n        <p>Key takeaway- Talking about mental health is not just about sharing struggles - it is about creating hope, fostering understanding, and reminding people that they are not alone. For someone battling mental health challenges, a simple, open conversation can be the first step toward recovery.</p>\n      ",
     "DIGITAL_DETOX": "<p>These days, it feels like our phones are glued to our hands. From the moment we wake up to the second we fall asleep, we're scrolling, checking notifications, or switching between apps. It's almost second nature. But here's the truth—while technology connects us to the world, it can also overwhelm our minds. Constant pings, endless comparisons on social media, and the pressure to always be \"online\" slowly drain our mental energy.</p><p>That's where a digital detox comes in—not as a punishment, but as a reset button for your mind.</p><br><h1><strong>Simple Ways to Start Your Digital Detox:</strong></h1><br><ul><li><strong>Set Boundaries with Your Devices:</strong> Decide small windows of time where you'll be offline—maybe during meals or the first hour after waking up. Even short breaks make a big difference.</li><li><strong>Turn Off Non-Essential Notifications:</strong> Every ping pulls your attention. Ask yourself: Do I really need to be notified of this? Chances are, most apps can wait.</li><li><strong>Replace Screen Time with Real Activities:</strong> Read a book, go for a walk, write in a journal, or even sit quietly with your thoughts. Offline activities help your brain slow down and recharge.</li><li><strong>Practice \"No-Phone Zones\":</strong> Keep your bedroom or dining table phone-free. This creates sacred spaces where your mind can rest without distractions.</li><li><strong>Reconnect with Yourself:</strong> Notice how you feel when you step away from screens. Do you feel calmer? More present? More in control? That awareness is part of the healing process.</li></ul><br><h2>The Mental Health Benefits</h2><p>A digital detox doesn't mean giving up technology forever. It simply reminds you that you're in control—not your phone. By unplugging, you reduce stress, improve sleep, boost focus, and create more room for genuine connections—with yourself and the people around you.</p><br><p><strong>The takeaway:</strong> A digital detox isn't about disconnecting from the world—it's about reconnecting with yourself. If you're struggling with your mental health, even a short break from screens can feel like a deep breath for your mind.</p>",
