--- a/frontend/public/locales/en/blog.json
+++ b/frontend/public/locales/en/blog.json
@@ -17,13 +17,13 @@
   },
   "titles": {
     "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "Why Talking About Mental Health Matters?",
-    "DIGITAL_DETOX_HOW_TO_RESET_YOUR_MIND": "Digital Detox: How to Reset Your Mind",
+    "DIGITAL_DETOX": "Digital Detox: How to Reset Your Mind",
     "SIMPLE_HABITS_TO_BOOST_YOUR_MENTAL_WELLNESS_DAILY": "Simple Habits to Boost Your Mental Wellness Daily",
     "SLEEP_THE_SECRET_PILLAR_OF_MENTAL_HEALTH": "Sleep: The Secret Pillar of Mental Health",
-    "JOURNALING_FOR_CLARITY_TURNING_THOUGHTS_INTO_HEALING_WORDS": "Journaling for Clarity: Turning Thoughts Into Healing Words",
+    "JOURNALING_FOR_CLARITY": "Journaling for Clarity: Turning Thoughts Into Healing Words",
     "THE_HIDDEN_LINK_BETWEEN_CREATIVITY_AND_MENTAL_HEALTH": "The Hidden Link Between Creativity and Mental Health",
     "RESILIENCE_BUILDING_HOW_TO_BOUNCE_BACK_FROM_SETBACKS_STRONGER": "Resilience Building: How to Bounce Back from Setbacks Stronger",
-    "WHEN_MENTAL_HEALTH_MAKES_CONNECTIONS_HARDER_ANXIETY_OVERTHINKING_AND_SOCIAL_AWKWARDNESS": "When Mental Health Makes Connections Harder: Anxiety, Overthinking, and Social Awkwardness",
+    "WHEN_MENTAL_HEALTH_MAKES_CONNECTIONS_HARDER": "When Mental Health Makes Connections Harder: Anxiety, Overthinking, and Social Awkwardness",
     "SILENCE_AND_SOLITUDE_WHY_DOING_NOTHING_IS_SOMETIMES_EVERYTHING": "Silence and Solitude: Why Doing Nothing is Sometimes Everything"
   },
   "dates": {
@@ -55,4 +55,3 @@
     "SILENCE_AND_SOLITUDE": "<p>In today's world, we are always rushing. Notifications ping, deadlines pile up, and even our free time often gets filled with scrolling. But solitude isn’t loneliness—it’s nourishment.</p><br><h2><strong>Why Solitude Matters:</strong></h2><ul><li><strong>It Grounds You:</strong> When you’re alone with your thoughts, you reconnect with your needs, desires, and emotions.</li><li><strong>It Reduces Noise:</strong> Silence allows your mind to slow down and your body to exhale. It's a mental reset.</li><li><strong>It Strengthens Creativity:</strong> Many great ideas are born in quiet moments when distractions are gone.</li></ul><br><h2><strong>Ways to Embrace Solitude:</strong></h2><ul><li>Take a solo walk—no music, just you and your breath.</li><li>Sit on your balcony or by a window and observe.</li><li>Spend 5 minutes a day doing absolutely nothing—just being.</li></ul><br><p><strong>The takeaway:</strong> Doing nothing isn’t wasting time—it’s giving your mind a break. In silence, you can hear yourself clearly again. That’s where healing often begins.</p>"
   }
 }
-  
