--- a/frontend/public/locales/bn/blog.json
+++ b/frontend/public/locales/bn/blog.json
@@ -22,7 +22,7 @@
     "SLEEP_THE_SECRET_PILLAR_OF_MENTAL_HEALTH": "ঘুম: মানসিক স্বাস্থ্যের গোপন স্তম্ভ",
     "JOURNALING_FOR_CLARITY": "পরিষ্কার চিন্তার জন্য জার্নালিং: ভাবনাকে নিরাময়মূলক কথায় রূপান্তর",
     "THE_HIDDEN_LINK_BETWEEN_CREATIVITY_AND_MENTAL_HEALTH": "সৃজনশীলতা ও মানসিক স্বাস্থ্যের মধ্যে লুকানো সম্পর্ক",
-    "RESILIENCE_BUILDING_HOW_TO_BOUNCE_BACK_FROM_SETBACKS_STRONGER": "সহনশীলতা গড়ে তোলা: বিপর্যয় থেকে আরও শক্তিশালীভাবে ফিরে আসার উপায়",
+    "RESILIENCE_BUILDING": "সহনশীলতা গড়ে তোলা: বিপর্যয় থেকে আরও শক্তিশালীভাবে ফিরে আসার উপায়",
     "WHEN_MENTAL_HEALTH_MAKES_CONNECTIONS_HARDER": "যখন মানসিক স্বাস্থ্য সম্পর্ক তৈরি কঠিন করে তোলে: উদ্বেগ, অতিরিক্ত চিন্তা ও সামাজিক অস্বস্তি",
     "SILENCE_AND_SOLITUDE": "নিঃশব্দতা ও নিঃসঙ্গতা: কেন কখনও কিছু না করাই সবচেয়ে বড় কাজ"
   },
