--- a/frontend/public/locales/en/blog.json
+++ b/frontend/public/locales/en/blog.json
@@ -22,9 +22,9 @@
     "SLEEP_THE_SECRET_PILLAR_OF_MENTAL_HEALTH": "Sleep: The Secret Pillar of Mental Health",
     "JOURNALING_FOR_CLARITY": "Journaling for Clarity: Turning Thoughts Into Healing Words",
     "THE_HIDDEN_LINK_BETWEEN_CREATIVITY_AND_MENTAL_HEALTH": "The Hidden Link Between Creativity and Mental Health",
-    "RESILIENCE_BUILDING_HOW_TO_BOUNCE_BACK_FROM_SETBACKS_STRONGER": "Resilience Building: How to Bounce Back from Setbacks Stronger",
+    "RESILIENCE_BUILDING": "Resilience Building: How to Bounce Back from Setbacks Stronger",
     "WHEN_MENTAL_HEALTH_MAKES_CONNECTIONS_HARDER": "When Mental Health Makes Connections Harder: Anxiety, Overthinking, and Social Awkwardness",
-    "SILENCE_AND_SOLITUDE_WHY_DOING_NOTHING_IS_SOMETIMES_EVERYTHING": "Silence and Solitude: Why Doing Nothing is Sometimes Everything"
+    "SILENCE_AND_SOLITUDE": "Silence and Solitude: Why Doing Nothing is Sometimes Everything"
   },
   "dates": {
     "March_15_2024": "March 15, 2024",
