--- a/frontend/public/locales/hi/blog.json
+++ b/frontend/public/locales/hi/blog.json
@@ -22,9 +22,9 @@
     "SLEEP_THE_SECRET_PILLAR_OF_MENTAL_HEALTH": "नींद: मानसिक स्वास्थ्य का गुप्त स्तंभ",
     "JOURNALING_FOR_CLARITY": "स्पष्टता के लिए जर्नलिंग: विचारों को उपचारकारी शब्दों में बदलना",
     "THE_HIDDEN_LINK_BETWEEN_CREATIVITY_AND_MENTAL_HEALTH": "रचनात्मकता और मानसिक स्वास्थ्य के बीच छिपा हुआ संबंध",
-    "RESILIENCE_BUILDING_HOW_TO_BOUNCE_BACK_FROM_SETBACKS_STRONGER": "सहनशीलता बढ़ाना: असफलताओं से और भी मजबूत होकर लौटने का तरीका",
+    "RESILIENCE_BUILDING": "सहनशीलता बढ़ाना: असफलताओं से और भी मजबूत होकर लौटने का तरीका",
     "WHEN_MENTAL_HEALTH_MAKES_CONNECTIONS_HARDER": "जब मानसिक स्वास्थ्य रिश्तों को कठिन बना देता है: चिंता, अधिक सोचना और सामाजिक असहजता",
-    "SILENCE_AND_SOLITUDE_WHY_DOING_NOTHING_IS_SOMETIMES_EVERYTHING": "मौन और एकांत: क्यों कभी-कभी कुछ न करना ही सब कुछ होता है"
+    "SILENCE_AND_SOLITUDE": "मौन और एकांत: क्यों कभी-कभी कुछ न करना ही सब कुछ होता है"
   },
   "dates": {
     "March_15_2024": "15 मार्च, 2024",
