--- a/frontend/public/locales/tu/blog.json
+++ b/frontend/public/locales/tu/blog.json
@@ -22,9 +22,9 @@
     "SLEEP_THE_SECRET_PILLAR_OF_MENTAL_HEALTH": "నిద్ర: మానసిక ఆరోగ్యానికి గుప్తమైన పునాది",
     "JOURNALING_FOR_CLARITY": "స్పష్టత కోసం జర్నలింగ్: ఆలోచనలను చికిత్సగా మారుస్తూ పదాలలోకి మలచడం",
     "THE_HIDDEN_LINK_BETWEEN_CREATIVITY_AND_MENTAL_HEALTH": "సృజనాత్మకత మరియు మానసిక ఆరోగ్యానికి మధ్య దాగిన సంబంధం",
-    "RESILIENCE_BUILDING_HOW_TO_BOUNCE_BACK_FROM_SETBACKS_STRONGER": "స్థిరత్వాన్ని పెంపొందించడం: ప్రతిసారీ ఆటుపోట్ల నుండి బలంగా ఎలా తిరిగి రావాలి",
+    "RESILIENCE_BUILDING": "స్థిరత్వాన్ని పెంపొందించడం: ప్రతిసారీ ఆటుపోట్ల నుండి బలంగా ఎలా తిరిగి రావాలి",
     "WHEN_MENTAL_HEALTH_MAKES_CONNECTIONS_HARDER": "మానసిక ఆరోగ్యం సంబంధాలను క్లిష్టం చేస్తే: ఆందోళన, అతిరేచనలు మరియు సామాజిక అసౌకర్యం",
-    "SILENCE_AND_SOLITUDE_WHY_DOING_NOTHING_IS_SOMETIMES_EVERYTHING": "నిశ్శబ్దత మరియు ఒంటరితనం: ఎందుకు కొన్ని సార్లు ఏమి చేయకపోవడమే అవసరం"
+    "SILENCE_AND_SOLITUDE": "నిశ్శబ్దత మరియు ఒంటరితనం: ఎందుకు కొన్ని సార్లు ఏమి చేయకపోవడమే అవసరం"
   },
   "dates": {
     "March_15_2024": "15 మార్చి, 2024",
