gamifcaition done, blog page issue done, introductor part done

--- a/frontend/public/locales/bn/blog.json
+++ b/frontend/public/locales/bn/blog.json
@@ -13,7 +13,8 @@
     "expression": "অভিব্যক্তি",
     "growth": "বৃদ্ধি",
     "anxiety": "উদ্বেগ",
-    "mindfulness": "সচেতনতা"
+    "mindfulness": "সচেতনতা",
+    "selfCare": "নিজের যত্ন"
   },
   "titles": {
     "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "মানসিক স্বাস্থ্য সম্পর্কে কথা বলা কেন গুরুত্বপূর্ণ?",
