--- a/frontend/public/locales/en/blog.json
+++ b/frontend/public/locales/en/blog.json
@@ -13,7 +13,8 @@
     "expression": "Expression",
     "growth": "Growth",
     "anxiety": "Anxiety",
-    "mindfulness": "Mindfulness"
+    "mindfulness": "Mindfulness",
+    "selfCare": "Self Care"
   },
   "titles": {
     "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "Why Talking About Mental Health Matters?",
