--- a/frontend/public/locales/hi/blog.json
+++ b/frontend/public/locales/hi/blog.json
@@ -13,7 +13,8 @@
     "expression": "अभिव्यक्ति",
     "growth": "विकास",
     "anxiety": "चिंता",
-    "mindfulness": "सजगता"
+    "mindfulness": "सजगता",
+    "selfCare": "स्वयं की देखभाल"
   },
   "titles": {
     "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "मानसिक स्वास्थ्य के बारे में बात करना क्यों ज़रूरी है?",
