--- a/frontend/public/locales/pu/blog.json
+++ b/frontend/public/locales/pu/blog.json
@@ -13,7 +13,8 @@
     "expression": "ਅਭਿਵਿੰਨਤਾ",
     "growth": "ਵਿਕਾਸ",
     "anxiety": "ਚਿੰਤਾ",
-    "mindfulness": "ਸਾਵਧਾਨੀ"
+    "mindfulness": "ਸਾਵਧਾਨੀ",
+    "selfCare": "ਆਤਮ ਸੰਭਾਲ"
   },
   "titles": {
     "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "ਮਾਨਸਿਕ ਸਿਹਤ ਬਾਰੇ ਗੱਲ ਕਰਨੀ ਕਿਉਂ ਜ਼ਰੂਰੀ ਹੈ?",
