--- a/frontend/public/locales/ti/blog.json
+++ b/frontend/public/locales/ti/blog.json
@@ -13,7 +13,8 @@
     "expression": "பிரকাশம்",
     "growth": "வளர்ச்சி",
     "anxiety": "பிரச்சனை",
-    "mindfulness": "கவனத்துடன்"
+    "mindfulness": "கவனத்துடன்",
+    "selfCare": "சுய பராமரிப்பு"
   },
   "titles": {
     "WHY_TALKING_ABOUT_MENTAL_HEALTH_MATTERS": "மனநலம் பற்றி பேசுவது ஏன் முக்கியம்?",
